<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="app_name" translatable="false">NSTU Calendar</string>

    <string name="error_internet">Internet problems, try again later!</string>
    <string name="error_parse">Application error, please try again later or contact the developer!</string>
    <string name="error_save">Error saving, try again later or reinstall the app!</string>
    <string name="error_unknown">Unknown error!</string>
    <string name="error_settings_group">Group not selected!</string>

    <string name="error_get_schedule">Failed to get schedule. Maybe you haven\'t selected a group!</string>
    <string name="error_calendar_permission">The app does not have access to your calendar. Please grant permission!</string>
    <string name="error_create_calendar">Failed to create calendar.</string>
    <string name="error_add_event">Failed to add some classes to the calendar.</string>
    <string name="error_delete_calendar">Failed to delete calendar.</string>

    <string name="lesson_type_lecture">Lecture</string>
    <string name="lesson_type_practice">Practice</string>
    <string name="lesson_type_laboratory">Laboratory</string>
    <string name="lesson_type_other">Lesson</string>

    <string name="day_of_week_monday">Monday</string>
    <string name="day_of_week_tuesday">Tuesday</string>
    <string name="day_of_week_wednesday">Wednesday</string>
    <string name="day_of_week_thursday">Thursday</string>
    <string name="day_of_week_friday">Friday</string>
    <string name="day_of_week_saturday">Saturday</string>
    <string name="day_of_week_sunday">Sunday</string>
    <string name="day_of_week_unknown">Unknown</string>

    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="month_unknown">Unknown</string>

    <string name="bottom_nav_schedule">Schedule</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_export">Export to calendar</string>
    <string name="bottom_nav_about_app">About app</string>
    <string name="bottom_nav_contact_developer">Contact the developer</string>

    <string name="settings_group">Group</string>
    <string name="settings_not_select">Not selected</string>
    <string name="settings_time">Use 12-hour time format</string>
    <string name="settings_monet">Dynamic colors (for Android 12 and above)</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_language">Language</string>
    <string name="settings_title_select_language">Select language</string>
    <string name="settings_english">English</string>
    <string name="settings_russian">Russian</string>
    <string name="settings_as_on_the_device">As on the device</string>
    <string name="settings_light">Light</string>
    <string name="settings_dark">Dark</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_title_customization">Customization</string>

    <string name="theme_nstu">NSTU</string>
    <string name="theme_cornflower">Cornflower</string>
    <string name="theme_dark_orchid">Dark orchid</string>
    <string name="theme_mountain_meadow">Mountain</string>
    <string name="theme_pear">Pear</string>
    <string name="theme_salmon_orange">Salmon</string>
    <string name="theme_telemagenta">Telemagenta</string>
    <string name="theme_toad_in_love">Toad in love</string>
    <string name="theme_turquoise">Turquoise</string>

    <string name="hint_group_name">Group name</string>
    <string name="tab_week">week</string>
    <string name="toolbar_title_schedule">Schedule</string>
    <string name="not_update">Not updated</string>
    <string name="toolbar_item_today">To today</string>
    <string name="select_group">Select a group!</string>
    <string name="cd_now_lesson_up">Icon now lesson up</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="cd_error_icon">Error</string>
    <string name="cd_weeks">Weeks</string>
    <string name="cd_icon">Icon</string>
    <string name="menu_main_category">Main</string>
    <string name="temporarily_out_of_service">Temporarily out of service :(</string>
    <string name="menu_additionally_category">Additionally</string>
    <string name="permission__calendar_is_required">Permission to work with the calendar is required</string>
    <string name="grant_permission">Grant permission</string>
    <string name="toolbar_title_export">Export to calendar</string>
    <string name="select_calendar_to_export_title">Select a calendar to export:</string>
    <string name="clear_calendar">Clear calendar</string>
    <string name="export">Export</string>
    <string name="enable_reminder">Enable reminder for:</string>
    <string name="minutes">Minutes</string>
    <string name="export_description">Export the selected group\'s schedule to your device\'s calendar. You can also check the current schedule in the Schedule tab.\n\nImportant: The application will create a new local calendar (NstuCalendar). To display events correctly, you must activate this calendar in the settings of your standard Calendar application.</string>
    <string name="finish_export">Export completed successfully</string>
    <string name="group_not_select">Group not selected</string>
    <string name="cd_rustore" translatable="false">Rustore link</string>
    <string name="cd_github" translatable="false">Github link</string>
    <string name="nstu_ncalendar_about_app" translatable="false">Nstu\nCalendar</string>
    <string name="failed_open_link">Failed to open link</string>
    <string name="about_app_text">The application was created for NSTU NETI students to make access to the academic schedule as simple and fast as possible. It allows you to:\n• view your group\'s schedule;\n• save downloaded data, providing access to the schedule in offline mode;\n •transfer the schedule to the device calendar.</string>
</resources>