<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".settingsFragment.selectLanguage.SelectLanguageBottomSheet">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bsDragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rbgLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <RadioButton
            android:id="@+id/rbEn"
            style="@style/NstuCalendar.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_english" />

        <RadioButton
            android:id="@+id/rbRu"
            style="@style/NstuCalendar.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_russian" />

        <RadioButton
            android:id="@+id/rbSystem"
            style="@style/NstuCalendar.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_as_on_the_device" />
    </RadioGroup>

</LinearLayout>