<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".settingsFragment.selectDarkMode.SelectDarkModeBottomSheet">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bsDragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rbgDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <RadioButton
            android:id="@+id/rbLight"
            style="@style/NstuCalendar.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_light" />

        <RadioButton
            android:id="@+id/rbDark"
            style="@style/NstuCalendar.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_dark" />

        <RadioButton
            android:id="@+id/rbSystemDarkMode"
            style="@style/NstuCalendar.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_as_on_the_device" />
    </RadioGroup>

</LinearLayout>