<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gCalendarExportFragment.GCalendarExportFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablExport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbExport"
            style="@style/NstuCalendar.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_nav_menu"
            app:title="@string/toolbar_title_export" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/laCalendar"
        android:layout_width="0dp"
        android:layout_height="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ablExport"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/calendar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/cvReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/laCalendar">

        <TextView
            android:id="@+id/tvExportDescription"
            style="@style/NstuCalendar.TextView.Regular.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/export_description" />

    </ScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/piLoading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:hideAnimationBehavior="escape"
        app:layout_constraintBottom_toBottomOf="@id/ablExport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:showAnimationBehavior="inward" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvReminder"
        style="@style/NstuCalendar.CardView.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toTopOf="@id/btnExport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/swcEnableReminder"
                style="@style/NstuCalendar.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:checked="true"
                android:text="@string/enable_reminder" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etReminderTime"
                style="@style/NstuCalendar.TextInputLayout.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minutes">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:text="30"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnExport"
        style="@style/NstuCalendar.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/export"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDeleteCalendar" />

    <Button
        android:id="@+id/btnDeleteCalendar"
        style="@style/NstuCalendar.Button.Outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/clear_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvGrantPermission"
        style="@style/NstuCalendar.CardView.Elevated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                style="@style/NstuCalendar.TextView.Medium.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/permission__calendar_is_required"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnGrandPermission"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnGrandPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grant_permission"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>