<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutAppFragment.AboutAppFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbAboutApp"
        style="@style/NstuCalendar.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_nav_menu"
        app:title="@string/bottom_nav_about_app" />

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cd_icon"
        android:src="@drawable/ic_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbAboutApp" />

    <TextView
        android:id="@+id/tvAboutApp"
        style="@style/NstuCalendar.TextView.Regular.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/about_app_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAppIcon" />

    <TextView
        android:id="@+id/tvVersionCode"
        style="@style/NstuCalendar.TextView.Medium.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>