<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".weeklyScheduleFragment.WeeklyScheduleFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ablWeeklySchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_top_app_bar_background"
            android:fitsSystemWindows="true"
            app:liftOnScroll="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tbWeeklySchedule"
                style="@style/NstuCalendar.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:menu="@menu/menu_toolbar_weekly_schedule"
                app:navigationIcon="@drawable/ic_nav_menu"
                app:title="@string/toolbar_title_schedule" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAppBarContentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <TextView
                    android:id="@+id/tvGroup"
                    style="@style/NstuCalendar.TextView.Medium.Label.SecondaryBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_group"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="АБс-223" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/cpiScheduleLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:indeterminate="true"
                    app:hideAnimationBehavior="escape"
                    app:indicatorSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/tvLastUpdateTime"
                    app:layout_constraintEnd_toStartOf="@id/imvError"
                    app:layout_constraintTop_toTopOf="@id/tvLastUpdateTime"
                    app:showAnimationBehavior="inward" />

                <ImageView
                    android:id="@+id/imvError"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape_default_corners"
                    android:backgroundTint="?attr/colorError"
                    android:contentDescription="@string/cd_error_icon"
                    android:padding="4dp"
                    android:src="@drawable/ic_error"
                    app:layout_constraintBottom_toBottomOf="@id/tvLastUpdateTime"
                    app:layout_constraintEnd_toStartOf="@id/tvLastUpdateTime"
                    app:layout_constraintTop_toTopOf="@id/tvLastUpdateTime" />

                <TextView
                    android:id="@+id/tvLastUpdateTime"
                    style="@style/NstuCalendar.TextView.Medium.Label.TertiaryBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_update"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="24.04 14:22" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlWeeks"
                style="@style/NstuCalendar.TabLayout.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_weeks"
                app:tabMode="scrollable" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpWeeks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectGroup"
            style="@style/NstuCalendar.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_group"
            app:icon="@drawable/ic_group" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_drawer"
        app:itemIconTint="?attr/colorPrimary"
        app:menu="@menu/menu_nav" />

</androidx.drawerlayout.widget.DrawerLayout>
